syntax = "proto3";

// options for Java generated sources
option java_multiple_files = true;
option java_package = "com.thinhda.spring.grpc.core.model";


package sms.core;

message GetAllNewsRequest{
  string token =1;
}

message GetNewsByIdRequest{
  string id = 1;
  string token = 2;
}

message GetNewsByCategoryRequest{
  string category =1;
  string token =2;
}

message Source{
  string id = 4;
  string name=1;
  string reference =2;
  int32 likes = 3;
}
message News{
  string id =3;
  string heading = 1;
  repeated Source sources =2;
  Category category = 4;
}
message Category{
  string id =1;
  string name =2;
}

message MultipleNewsResponse{
  repeated News news =1;
}
message SingleNewsResponse{
  News news =1;
}
message MultipleCategoriesResponse{
  repeated Category category =1;
}
message GetCategoriesRequest{
  string token =1;
}
message DeleteNewsRequest{
  string token =1;
  string newsId = 2;
}
message DeleteSourceRequest{
  string token =1;
  string sourceId =2;
}
message DeleteCategoryRequest{
  string token =1;
  string categoryId =2;
}
message DeleteResponse{
  bool deleted =1;
}
message GetSourcesByNewsRequest{
  string token =1;
  string newsId =2;
}
message MultipleSourcesResponse{
  repeated Source source =1;
}

service NewsService{
  rpc getNewsByCategory(GetNewsByCategoryRequest) returns(MultipleNewsResponse);
  rpc getNewsById(GetNewsByIdRequest) returns(SingleNewsResponse);
  rpc getAllNews(GetAllNewsRequest) returns(MultipleNewsResponse);
  rpc getAllCategories(GetCategoriesRequest) returns(MultipleCategoriesResponse);
  rpc deleteCategory(DeleteCategoryRequest) returns(DeleteResponse);
  rpc deleteSource(DeleteSourceRequest) returns(DeleteResponse);
  rpc deleteNews(DeleteNewsRequest) returns(DeleteResponse);
  rpc getSourcesByNews(GetSourcesByNewsRequest) returns(MultipleSourcesResponse);
}